--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ nav {
     background-color: transparent;
 }
 
-nav ul {
+nav ol {
     list-style-type:none;
     margin: 0;
     padding: 0;
@@ -59,12 +59,12 @@ nav li a:hover {
         float: none;
     }
 
-    nav ul {
+    nav ol {
         display: none;
         transition: display 0.3s ease-in-out; /*Add smooth transition effect */
     }
 
-    nav.show ul {
+    nav.show ol {
         display: block;
     }
 
@@ -164,6 +164,18 @@ nav li a:hover {
     .item {
         width: calc(33.33% - 20px); /*Three items per row for larger screens*/
     }
+}
+.get-in-touch-button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border:none;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.get-in-touch-button:hover {
+    background-color: #45a049;
 }
 
 footer {
