--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
+    display: flex;
+    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     min-height: 100vh;
     margin-bottom: 20px;
-    background-color: lightblue;
 }
 
 header {
@@ -89,15 +90,38 @@ nav li a:hover {
 
 }
 .background-section {
+    flex: 1;
     position: relative;
-    background-image: url('img/background.jpg');
     background-size:cover;
+    text-align: center;
     background-position: center;
     background-repeat: no-repeat;
     color: #333;
     text-align: center;
     padding: 50px;
+    box-sizing: border-box;
+    margin: 0;
 }
+
+.background-section .image::before {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.background-section .text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    z-index:1;
+}
+
 
 .buttons-section {
     text-align: center;
@@ -152,6 +176,7 @@ nav li a:hover {
     width: calc(50% - 20px); /*Two items per row */
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .item img {
@@ -168,39 +193,114 @@ nav li a:hover {
         width: calc(33.33% - 20px); /*Three items per row for larger screens*/
     }
 }
+#contactFormSection {
+    padding: 50px;
+    text-align: center;
+}
+
+.nav-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color:white;
+    text-decoration: none;
+    border-radius: 40px;
+    margin-top: 10px;
+    transition: background-color 0.3s;
+}
+
+.nav-button:hover {
+    background-color: #4CAF50;
+}
 
 #contactForm {
     display: none;
-    max-width: 400px;
-    margin: 20px auto;
-    background-color: lightgreen;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
+#contactForm label {
+    display: block;
     margin-bottom: 8px;
     color: #333;
 }
 
-input, textarea {
+#contactForm input,
+#contactForm textarea {
+    width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-input[type="submit"] {
+#contactForm textarea {
+    resize: vertical;
+}
+
+#contactForm input[type="submit"] {
     background-color: #333;
     color: #fff;
     cursor: pointer;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    border-radius: 40px;
     transition: background-color 0.3s;
 }
 
-input[type="submit"]:hover {
+#contactForm input[type="submit"]:hover {
+    background-color: #4CAF50;
+}
+
+#closeContactForm {
+    background-color: #ccc;
+    color: #333;
+    cursor: pointer;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+#closeContactForm:hover {
+    background-color: #999;
+}
+
+
+.input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    cursor: pointer;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+.input[type="submit"]:hover {
+    background-color: #4CAF50;
+}
+
+#scrollParagraph{
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background-color: #333;
+    color: #fff;
+    border-radius: 40px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+#scrollParagraph:hover {
     background-color: #4CAF50;
 }
 
@@ -208,7 +308,6 @@ footer {
     background-color:#333;
     color: white;
     padding: 20px; 
-    margin-top: auto;
     text-align: center;
 }
 
