--- a/css/style.css
+++ b/css/style.css
@@ -342,14 +342,20 @@ nav li a:hover {
 }
 #customer-reviews {
     text-align: center;
+    margin-bottom: 30px;
+    width: 100%;
 }
 
-#customer-reviews h2 {
-    background-color: #fff;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
+#customer-reviews h3 {
+    padding: 10px;
+    border:#ccc;
+    color: #333;
+    margin: 0;
+    text-align: center;
     font-family: fantasy;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 93%;
 }
 
 #reviews-container {
@@ -386,6 +392,7 @@ nav li a:hover {
     border: 1px solid #add;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 300px;
 }
 
 #add-review-form button {
